--- a/index.html
+++ b/index.html
@@ -36,6 +36,29 @@
                                 <h1>JUST SAY HELLO!</h1>
                                 <p>JUST LET US KNOW MORE ABOUT YOU!</p>
                         </div>
+
+                        <div class="inform">
+                                <div class="item item1">
+                                        <input type="text" placeholder="First Name">
+                                </div>
+                                <div class="item item2">
+                                        <input type="text" placeholder="First Name">
+                                </div>
+                                <div class="item item3">
+                                        <input type="text" placeholder="First Name">
+                                </div>
+                                <div class="item item4">
+                                        <input type="text" placeholder="First Name">
+                                </div>
+                                <div class="item item5">
+                                        <input type="text" placeholder="Message">
+                                </div>
+                                
+                        </div>
+
+                        <div class="submit">
+
+                        </div>
                 </div>
         </div>
 </body>
